compiler/tests/should-fail/InsecureDataFlowIntegrity.via
/* InsecureDataFlowError */

fun main() {
    val untrusted: int{A<-} = 42;
    val trusted: int{(A ∧ B)<-} = untrusted;
}

host A 
